<resources>
    <string name="app_name">ChatAir-android</string>
    <string name="text_chatAir">ChatAir</string>

    <!-- Chat -->
    <string name="chat_send_message">Enter a message</string>
    <string name="chat_send_message_content_description">Send message</string>

    <!--  Contacts  -->
    <string name="contacts_label">Contacts</string>
    <string name="search_label">Search</string>

    <!-- Forget Password -->
    <string name="forget_password_label">Forget Password</string>
    <string name="forget_password_prompt">If you forget your password. Enter your email in below field we\'ll send you an email with instructions to change the password</string>
    <string name="enter_email_hint">Enter email address</string>
    <string name="send_label">Send</string>

    <!-- Login Screen -->
    <string name="txt_label_sign_in">Sign In</string>
    <string name="hint_email_address">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="txt_label_remember_me">Remember me</string>
    <string name="txt_label_forgot_password">Forgot Password</string>
    <string name="txt_label_or">Or</string>
    <string name="txt_login_with_google">Login with Google</string>

</resources>
